aws_security_group.tf
resource "aws_security_group" "allow_all" {
  name = "allow_ssh_and_tcp"
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  description = "allow tcp 22 and 80"
}
